--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="text_edit_description">Description</string>
     <string name="text_date">Date :</string>
     <string name="text_edit_date">Date</string>
+    <string name="logo">Tricolor</string>
 </resources>
