--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
     <string name="app_name">Tricount</string>
-    <string name="title_add_tricount">Ajouter Tricount</string>
+    <string name="title_add_tricount">Nouveau Tricount</string>
     <string name="text_nom">Nom :</string>
     <string name="text_edit_nom">Nom</string>
     <string name="text_description">Description :</string>
     <string name="text_edit_description">Description</string>
     <string name="text_date">Date :</string>
     <string name="text_edit_date">Date</string>
+    <string name="btn_add_Tricount">Valider</string>
 </resources>
