--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="text_date">Date :</string>
     <string name="text_edit_date">Date</string>
     <string name="logo">Tricolor</string>
+    <string name="equilibre">Equilibrage</string>
+    <string name="depenses">Depenses</string>"
 </resources>
