--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,12 @@
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
-
+    <string name="Total">Total des dépenses</string>
+    <string name="btn_add_depense">Ajouter une dépense</string>
+    <string name="btn_Membre">Membres</string>
+    <string name="text_prenom">Prenom :</string>
+    <string name="add_Membre">Ajouter un membre</string>
+    <string name="text_Membre">Membres</string>
     <string name="lorem_ipsum">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
         volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
